modified:   labs/lab1/.OTTER_LOG 	modified:   labs/lab1/lab01.ipynb 	new file:   labs/lab1/lab01_2025_09_08T02_43_09_881840.zip 	new file:   labs/lab1/lab01_2025_09_08T02_43_34_638188.zip

--- a/labs/lab1/lab01.ipynb
+++ b/labs/lab1/lab01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c1dd100b",
    "metadata": {
     "deletable": false,
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "bb645c2e",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "539b4c8c",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "2b0805a4",
    "metadata": {
     "deletable": false
@@ -796,7 +796,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x75beadf915e0>"
+       "<IPython.lib.display.YouTubeVideo at 0x77f3236208c0>"
       ]
      },
      "execution_count": 22,
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "da64d2b2",
    "metadata": {
     "deletable": false,
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "804b1a35",
    "metadata": {
     "deletable": false,
@@ -886,13 +886,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q3_3_1</pre></strong> passed! 🌟</p>"
+       "<p><strong><pre style='display: inline;'>q3_3_1</pre></strong> passed! 🚀</p>"
       ],
       "text/plain": [
        "q3_3_1 results: All test cases passed!"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "8ae23787",
    "metadata": {
     "deletable": false,
@@ -928,7 +928,7 @@
        "0.040223694659304865"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "c0caa8c5",
    "metadata": {
     "deletable": false,
@@ -973,13 +973,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q3_3_2</pre></strong> passed! 🍀</p>"
+       "<p><strong><pre style='display: inline;'>q3_3_2</pre></strong> passed! ✨</p>"
       ],
       "text/plain": [
        "q3_3_2 results: All test cases passed!"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "dc37caca",
    "metadata": {},
    "outputs": [
@@ -1012,7 +1012,7 @@
        "5"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "ce790a43",
    "metadata": {},
    "outputs": [
@@ -1033,7 +1033,7 @@
        "5"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "id": "d39359c3",
    "metadata": {
     "deletable": false,
@@ -1074,7 +1074,7 @@
        "1462"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "993e4bc5",
    "metadata": {
     "deletable": false,
@@ -1110,13 +1110,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q4_1_1</pre></strong> passed! ✨</p>"
+       "<p><strong><pre style='display: inline;'>q4_1_1</pre></strong> passed! 🍀</p>"
       ],
       "text/plain": [
        "q4_1_1 results: All test cases passed!"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "d56dfc2e",
    "metadata": {},
    "outputs": [
@@ -1146,7 +1146,7 @@
        "4"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "d3192adc",
    "metadata": {},
    "outputs": [
@@ -1192,7 +1192,7 @@
        "3.5"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "1f27a556",
    "metadata": {
     "deletable": false,
@@ -1240,7 +1240,7 @@
        "1.5"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "687336b5",
    "metadata": {
     "deletable": false,
@@ -1269,13 +1269,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q51</pre></strong> passed! 🙌</p>"
+       "<p><strong><pre style='display: inline;'>q51</pre></strong> passed! 🌟</p>"
       ],
       "text/plain": [
        "q51 results: All test cases passed!"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1295,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "b58d9a35",
    "metadata": {},
    "outputs": [
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "4ad8b3b7",
    "metadata": {},
    "outputs": [
@@ -1362,10 +1362,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x75beae0840e0>"
+       "<IPython.lib.display.IFrame at 0x77f323473ec0>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1387,31 +1387,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "34129515",
    "metadata": {
     "deletable": false,
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.9"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# The three cats' lengths, in inches:\n",
     "hummus =  24.5 # Hummus is 24.5 inches long\n",
     "gatkes = 19.7 # Gatkes is 19.7 inches long\n",
     "zeepty = 15.8 # Zeepty is 15.8 inches long\n",
-    "\n",
-    "\n",
     "\n",
     "# We'd like to look at all 3 pairs of lengths, \n",
     "# compute the absolute difference between each pair, \n",
@@ -1420,12 +1407,12 @@
     "# If you're stuck, try computing the value for each step of the process \n",
     "# (like the difference between Hummus's length and Gatkes's length) \n",
     "# on a separate line and giving it a name (like hummus_gatkes_length_diff)\n",
-    "min_length_difference = ..."
+    "min_length_difference = min(abs(hummus - gatkes), abs(gatkes - zeepty), abs(zeepty - hummus))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 38,
    "id": "8becaeba",
    "metadata": {
     "deletable": false,
@@ -1435,46 +1422,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong style='color: red;'><pre style='display: inline;'>q5_1_1</pre> results:</strong></p><p><strong><pre style='display: inline;'>q5_1_1 - 1</pre> result:</strong></p><pre>    ❌ Test case failed\n",
-       "    Trying:\n",
-       "        round(min_length_difference, 5)\n",
-       "    Expecting:\n",
-       "        3.9\n",
-       "    **********************************************************************\n",
-       "    Line 1, in q5_1_1 0\n",
-       "    Failed example:\n",
-       "        round(min_length_difference, 5)\n",
-       "    Exception raised:\n",
-       "        Traceback (most recent call last):\n",
-       "          File \"/usr/local/python/3.12.1/lib/python3.12/doctest.py\", line 1359, in __run\n",
-       "            exec(compile(example.source, filename, \"single\",\n",
-       "          File \"<doctest q5_1_1 0[0]>\", line 1, in <module>\n",
-       "            round(min_length_difference, 5)\n",
-       "        TypeError: type function doesn't define __round__ method\n",
-       "</pre>"
+       "<p><strong><pre style='display: inline;'>q5_1_1</pre></strong> passed! ✨</p>"
       ],
       "text/plain": [
-       "q5_1_1 results:\n",
-       "    q5_1_1 - 1 result:\n",
-       "        ❌ Test case failed\n",
-       "        Trying:\n",
-       "            round(min_length_difference, 5)\n",
-       "        Expecting:\n",
-       "            3.9\n",
-       "        **********************************************************************\n",
-       "        Line 1, in q5_1_1 0\n",
-       "        Failed example:\n",
-       "            round(min_length_difference, 5)\n",
-       "        Exception raised:\n",
-       "            Traceback (most recent call last):\n",
-       "              File \"/usr/local/python/3.12.1/lib/python3.12/doctest.py\", line 1359, in __run\n",
-       "                exec(compile(example.source, filename, \"single\",\n",
-       "              File \"<doctest q5_1_1 0[0]>\", line 1, in <module>\n",
-       "                round(min_length_difference, 5)\n",
-       "            TypeError: type function doesn't define __round__ method"
+       "q5_1_1 results: All test cases passed!"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1501,16 +1455,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "dab3d063",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running your submission against local test cases...\n",
+      "\n",
+      "\n",
+      "Your submission received the following results when run against available test cases:\n",
+      "\n",
+      "    q3_3_1 results: All test cases passed!\n",
+      "\n",
+      "    q3_3_2 results: All test cases passed!\n",
+      "\n",
+      "    q4_1_1 results: All test cases passed!\n",
+      "\n",
+      "    q51 results: All test cases passed!\n",
+      "\n",
+      "    q5_1_1 results: All test cases passed!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                    <p>\n",
+       "                        Your submission has been exported. Click\n",
+       "                        <a href=\"lab01_2025_09_08T02_43_34_638188.zip\" download=\"lab01_2025_09_08T02_43_34_638188.zip\" target=\"_blank\">here</a> to download\n",
+       "                        the zip file.\n",
+       "                    </p>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lab 1 - Ivan Duero\n"
+     ]
+    }
+   ],
    "source": [
     "# Save your notebook first, then run this cell to export your submission.\n",
-    "grader.export(pdf=False, run_tests=True)"
+    "grader.export(pdf=False, run_tests=True)\n",
+    "print(\"Lab 1 - Ivan Duero\")"
    ]
   },
   {
