new file:   .vscode/settings.json 	renamed:    bar_charts.ipynb -> demos/bar_charts.ipynb

--- a/demos/bar_charts.ipynb
+++ b/demos/bar_charts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "Vanilla    | 9"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "... (190 rows omitted)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "... (190 rows omitted)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,71 +290,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>Studio</th> <th>count</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>AVCO       </td> <td>1    </td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Buena Vista</td> <td>35   </td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Columbia   </td> <td>9    </td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Disney     </td> <td>11   </td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Dreamworks </td> <td>3    </td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Fox        </td> <td>24   </td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>IFC        </td> <td>1    </td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Lionsgate  </td> <td>3    </td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>MGM        </td> <td>7    </td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>Metro      </td> <td>1    </td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>\n",
-       "<p>... (13 rows omitted)</p>"
-      ],
-      "text/plain": [
-       "Studio      | count\n",
-       "AVCO        | 1\n",
-       "Buena Vista | 35\n",
-       "Columbia    | 9\n",
-       "Disney      | 11\n",
-       "Dreamworks  | 3\n",
-       "Fox         | 24\n",
-       "IFC         | 1\n",
-       "Lionsgate   | 3\n",
-       "MGM         | 7\n",
-       "Metro       | 1\n",
-       "... (13 rows omitted)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'studios' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m studio_distribution = \u001b[43mstudios\u001b[49m.group(\u001b[33m'\u001b[39m\u001b[33mStudio\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      2\u001b[39m studio_distribution\n",
+      "\u001b[31mNameError\u001b[39m: name 'studios' is not defined"
+     ]
     }
    ],
    "source": [
@@ -364,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
