modified:   demos/data_types (1).ipynb

--- a/demos/data_types (1).ipynb
+++ b/demos/data_types (1).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "224aef4b",
    "metadata": {
     "trusted": false
@@ -27,12 +27,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "18f7a18a",
    "metadata": {
     "trusted": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Flavor</th> <th>Color</th> <th>Price</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink       </td> <td>3.55 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>light brown</td> <td>4.75 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>dark brown </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink       </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>chocolate </td> <td>dark brown </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>bubblegum </td> <td>pink       </td> <td>4.75 </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "Flavor     | Color       | Price\n",
+       "strawberry | pink        | 3.55\n",
+       "chocolate  | light brown | 4.75\n",
+       "chocolate  | dark brown  | 5.25\n",
+       "strawberry | pink        | 5.25\n",
+       "chocolate  | dark brown  | 5.25\n",
+       "bubblegum  | pink        | 4.75"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cones = Table.read_table('cones.csv')\n",
     "cones"
@@ -60,12 +106,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4a01a853",
    "metadata": {
     "trusted": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Flavor</th> <th>Color</th> <th>Price</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink </td> <td>3.55 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>strawberry</td> <td>pink </td> <td>5.25 </td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>bubblegum </td> <td>pink </td> <td>4.75 </td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "Flavor     | Color | Price\n",
+       "strawberry | pink  | 3.55\n",
+       "strawberry | pink  | 5.25\n",
+       "bubblegum  | pink  | 4.75"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pink_cones = cones.where('Color', 'pink')\n",
     "pink_cones"
@@ -73,12 +153,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "71c0b5a0",
    "metadata": {
     "trusted": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pink_cones.num_rows / cones.num_rows * 100"
    ]
